--- a/Aulas/Fundamentos/PrimeiroProjeto/PrimeiroProjeto.csproj
+++ b/Aulas/Fundamentos/PrimeiroProjeto/PrimeiroProjeto.csproj
@@ -6,4 +6,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.8" />
+    <PackageReference Include="Serilog.AspNetCore" Version="8.0.2" />
+  </ItemGroup>
+
 </Project>
